# cloud-custodian

./: .gitignore  404.html  Makefile  index.html  sitemap.xml  tox.ini
actions/: index.html
advanced/: index.html
aws/: index.html
c7n/: query.py  utils.py
docs/: Makefile.sphinx  actions.html  contribute.html  deployment.html  filters.html  genindex.html  (+5 more)
docs_v2/: README.md  mkdocs.yml  pyproject.toml
docs_v2/docs/: .pages  actions.md  advanced.md  filters.md  index.md  policyStructure.md
docs_v2/docs/aws/: .pages  index.md  lambda.md  usage.md
docs_v2/docs/aws/examples/: accountinvalidiplogin.md  accountrootlogin.md  accountservicelimit.md  amicomp.md  asginvalidconfig.md  asgnotused.md  asgoffhours.md  blocknonstandardregionresources.md  dmsenforcessl.md  ebsgarbagecollect.md  ebssnapshots.md  ebsunencrypted.md  ec2-auto-tag-user.md  ec2ModifyInstanceMetadataOptions.md  ec2offhours.md  ec2oldinstances.md  ec2poweronstoppedforpatching.md  ec2unpatchedworkflow.md  eipgarbagecollect.md  elbdeleteinetfacing.md  elbgarbagecollection.md  elbsslblacklist.md  elbsslwhitelist.md  iamsetrolepolicy.md  index.md  lambdaerrorsnotify.md  offhours.md  rdsdeleteunused.md  rdspublicunencrypted.md  s3configurenewbucket.md  s3denypublicobjectacls.md  s3encryption.md  s3globalgrants.md  sagemakernotebookdeletepublicorunencrypted.md  securitygroupsaddpermission.md  securitygroupsdetectremediate.md  tagcompliance.md  vpcflowlog.md  vpcpeeringcrossaccount.md
docs_v2/docs/aws/topics/: config.md  index.md  securityhub.md  ssm.md  xray.md
docs_v2/overrides/: main.html
(+1226 files in other folders)
